# Embedded-Code

./: README.md  big-bsp  small-bsp
nuttxspace/apps/: CMakeLists.txt
nuttxspace/apps/stub/: CMakeLists.txt  Kconfig  Make.defs  Makefile  stub_main.c
nuttxspace/apps/stub_josh/: josh.c
nuttxspace/apps/testingApp/: CMakeLists.txt  Kconfig  Makefile  testingApp_main.c  testingButtons_main.c
nuttxspace/apps/testingAutoleds/: CMakeLists.txt  Kconfig  Make.defs  Makefile  testingAutoleds_main.c
nuttxspace/apps/testingButtons/: CMakeLists.txt  Kconfig  Make.defs  Makefile  testingButtons_main.c
nuttxspace/apps/testingGPIO/: CMakeLists.txt  Kconfig  Makefile  testingGPIO_main.c
nuttxspace/apps/testingGpio/: CMakeLists.txt  (+5 more)
nuttxspace/nuttx/: CMakeLists.txt  compileAlias.txt  spi.txt  va_list.txt
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  cargo.toml  find_bsp_header.sh
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/.cargo/: config.toml
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/include/: bindings.rs  board.rs  bringup.rs  comp_bindings.rs  nucleo-144.rs  wrapper.h
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/include/arch/: stm32_gpio.h
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/include/arch/hardware/: stm32_gpio.h
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/include/task/: task_create.c
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/scripts/: f746-flash.ld.tmp
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/src/: CMakeLists.txt  CONFIG_STM32_ROMFS_IMAGEFILE.txt  Make.defs  boot.rs  bringup.rs  find_bsp.sh  lib.rs  macros.rs  stm32_adc.rs  stm32_appinitialize.rs  stm32_autoleds.rs  stm32_bbsram.c  stm32_bbsram.rs  stm32_boot.rs  stm32_bringup.rs  stm32_buttons.rs  stm32_can.rs  stm32_cansock.rs  stm32_composite.c  stm32_composite.rs  stm32_dma_alloc.rs  stm32_gpio.c  stm32_gpio.rs  stm32_pwm.rs  stm32_qencoder.rs  stm32_reset.rs  stm32_romfs_initialize.rs  stm32_sdio.rs  stm32_spi.rs  stm32_usb.rs  stm32_userleds.c  stm32_userleds.rs
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/src/bindings/: generated.rs  mod.rs
nuttxspace/nuttx/boards/arm/stm32f7/nucleo-144/src/include/: bindings.rs  mod.rs
(+24 files in other folders)
