[package]
name = "large-board"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# Configuration for Static Library Building
[lib]
name = "nucleo_rs"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Dependencies for our project
[dependencies]
cty = "0.2.2"
cfg-if = "1.0"  # used throughout as a conditional dependencies
libc = "0.2.139"

heapless = "*"

log = "0.4.21"  # used to replicate warnings and errors at compile time
thiserror-no-std = "2.0.2" # no std version of throwing errors

# Build Dependencies for our project
[build-dependencies]
bindgen = "0.69.4"

[features]
default = []
# used in usb
CONFIG_STM32F7_OTGFS = []
CONFIG_USBHOST = []
CONFIG_USBDEV = []
# end of in usb
# used in spi
CONFIG_SPI = []
# end of in spi