[package]
name = "large-board"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# Configuration for Static Library Building
[lib]
name = "nucleo_rs"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Dependencies for our project
[dependencies]
cty = "0.2.2"
cfg-if = "1.0"  # used throughout as a conditional dependencies
libc = "0.2.139"
get-size = "0.1.4"
heapless = "*"

log = "0.4.21"  # used to replicate warnings and errors at compile time
thiserror-no-std = "2.0.2" # no std version of throwing errors

# Build Dependencies for our project
[build-dependencies]
bindgen = "0.69.4"
regex = "1.10.4"
topo_sort = "0.4.0"
