[package]
name = "nucleo_bsp"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# Configuration for Static Library Building
[lib]
name = "nucleo_rs"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Dependencies for our project
[dependencies]

# Build Dependencies for our project
[build-dependencies]
bindgen = "0.69.4"
regex = "1.10.4"
topo_sort = "0.4.0"
